add map and flatMap examples in Stream Api